--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1, h2, h3, h4{
 
 header{
     max-height: 110px;
-    border-radius: 0 0 15% 15%;
+    border-radius: 0 0 12% 12%;
     background-color: var(--blue-500);
 }
 
@@ -88,22 +88,23 @@ header{
 
 .search-form {
     border: 1px solid var(--gray-100);
-    border-radius: 1rem 0 0 1rem;
+    border-radius: 0.9rem 0 0 0.9rem;
     padding: 0.7rem 1rem;
     font-size: 0.88rem;
     outline: none;
     transition: 1s;
     font-family: var(--first-font);
     box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
+    color: var(--gray-400);
 }
 
-.search-form:focus {
-    border-color: var(--blue-500);
+::placeholder{
+    color: var(--gray-400);
 }
 
 .search-button {
     background-color: #fff;
-    border-radius: 0 1rem 1rem 0;
+    border-radius: 0 0.9rem 0.9rem 0;
     color: var(--blue-500);
     cursor: pointer;
     padding: 11px 12px;
@@ -150,14 +151,220 @@ main{
     max-width: 30px;
     color: var(--gray-600);
     background-color: var(--blue-100);
-    padding: 0.8rem 0.9rem;
+    padding: 0.7rem 0.8rem;
     border-radius: 0.9rem;
-    margin-left: 1rem;
+    margin: 0 0.5rem;
 }
 
 .category h2{
-    font-size: 15px;
-    font-weight: 600;
-    color: var(--gray-600);
-    margin-left: 1rem;
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--gray-500);
+    margin: 0.8rem 0.5rem;
+}
+
+.mySlides {display: none;}
+.slideshow-container img {
+    vertical-align: middle;
+    border-radius: 1rem;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 300px;
+  position: relative;
+  margin: auto;
+  margin-top: 2rem;
+  overflow: hidden;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 8px;
+  width: 8px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+.sale-container{
+
+}
+
+.sale-title{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    align-items: center;
+}
+
+/* Styling for the live sale heading */
+.live-sale-heading {
+    display: flex;
+    align-items: center;
+}
+
+/* The pulsing green dot */
+.live-indicator {
+    width: 8px; /* Size of the green dot */
+    height: 8px;
+    background-color: var(--blue-400);
+    border-radius: 50%;
+    margin-right: 14px; /* Space between the text and the dot */
+    box-shadow: 0 0 10px rgba(163, 241, 163, 0.7); /* Glowing green shadow */
+    animation: pulse 1.5s infinite; /* Heartbeat-like animation */
+}
+
+/* Keyframes for the pulsing effect */
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 10px var(--blue-400);
+    }
+    50% {
+        transform: scale(1.3); /* Makes the circle grow larger */
+        box-shadow: 0 0 20px var(--blue-400); /* Brighten the shadow */
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 10px var(--blue-300);
+    }
+}
+
+
+.sale-title h3{
+    color: var(--gray-800);
+}
+
+.sale-title p{
+    font-family: var(--first-font);
+    font-size: 0.8rem;
+    color: var(--gray-500);
+}
+
+.products-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(216, 219, 222, 0.656) 4px 12px 100px;
+    background-color: #fff;
+    border-radius: 1rem;
+}
+
+.image-container {
+    position: relative;
+}
+
+.favourite {
+    position: absolute;
+    top: 15px;  /* Adjust this value for the vertical position */
+    right: 15px; /* Adjust this value for the horizontal position */
+    font-size: 1rem;  /* Adjust the size of the heart icon */
+    color: #fff;  /* Change color if needed */
+    cursor: pointer;
+}
+
+.product img{
+    max-width: 150px;
+    border-radius: 1rem;
+}
+
+.product-about{
+    display: flex;
+    align-items: center;
+}
+
+
+.product-info{
+    padding: 0 1rem;
+    padding-top: 1rem;
+}
+
+.product-info h3{
+    font-size: 0.9rem;
+    color: var(--gray-800);
+    margin: 0;
+    padding: 0;
+    font-family: var(--first-font);
+
+}
+
+.product-info p{
+    font-size: 0.9rem;
+    color: var(--gray-500);
+    margin: 0;
+    padding: 0;
+}
+
+.product-price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+
+.product-price h3{
+    font-size: 1.4rem;
+    color: var(--blue-700);
+
+}
+
+.product-price p{
+    font-size: 10px;
+    color: #fff;
+    background-color: var(--blue-500);
+    padding: 8px;
+    border-radius: 1rem;
+}
+
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
 }
