--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ main{
 .category-logo{
     max-width: 30px;
     color: var(--gray-600);
-    background-color: var(--blue-100);
+    background-color: var(--blue-50);
     padding: 0.7rem 0.8rem;
     border-radius: 0.9rem;
     margin: 0 0.5rem;
@@ -332,10 +332,11 @@ main{
 }
 
 .product-info p{
-    font-size: 0.9rem;
-    color: var(--gray-500);
-    margin: 0;
+    font-size: 0.6rem;
+    color: var(--gray-400);
+    margin: 2px 0;
     padding: 0;
+    font-family: var(--first-font);
 }
 
 .product-price{
@@ -347,17 +348,18 @@ main{
 
 
 .product-price h3{
-    font-size: 1.4rem;
-    color: var(--blue-700);
+    font-size: 1.3rem;
+    color: var(--blue-500);
 
 }
 
 .product-price p{
-    font-size: 10px;
+    font-size: 8px;
     color: #fff;
-    background-color: var(--blue-500);
-    padding: 8px;
-    border-radius: 1rem;
+    background-color: var(--blue-400);
+    padding: 6px;
+    font-family: var(--first-font);
+    border-radius: 4px;
 }
 
 
